syntax = "proto3";
package checker;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "chainspace.io/prototype/transactor/types.proto";

enum Opcode {
  UNKNOWN = 0;
  CHECK = 1;
}

message CheckRequest {
  transactor.Transaction tx = 1;
}

message CheckResponse {
  bool ok = 1;
  bytes signature = 2;
}
